force-app/main/default/objects/FD_Applicant_Junction__c/FD_Applicant_Junction__c.object-meta.xml
<CustomObject>
    <label>FD-Applicant Junction</label>
    <nameField>
        <displayFormat>FDAJ-{00000}</displayFormat>
        <label>FD-Applicant Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FD-Applicant Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>