force-app/main/default/objects/FD_Applicant_Junction__c/fields/Applicant_Details__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Details__c</fullName>
    <description>Secondary Master Detail Relationship</description>
    <label>Applicant Details</label>
    <referenceTo>Applicant_Details__c</referenceTo>
    <relationshipLabel>FD-Applicant Junction</relationshipLabel>
    <relationshipName>FD_Applicant_Junction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>