force-app/main/default/objects/FD_Applicant_Junction__c/fields/FD_Details__c.field-meta.xml
<CustomField>
    <fullName>FD_Details__c</fullName>
    <description>Primary Master Object</description>
    <label>FD Details</label>
    <referenceTo>FD_Details__c</referenceTo>
    <relationshipLabel>FD-Applicant Junction</relationshipLabel>
    <relationshipName>FD_Applicant_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>