force-app/main/default/objects/FD_Applicant_Junction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Primary Applicant hesabin asil sahibi
Nominee  hesap sahibinin vekili</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Applicant</fullName>
            </value>
            <value>
                <fullName>Nominee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>